<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_flipper_category_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:measureAllChildren="false">

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading" />

    <include
        android:id="@+id/view_category_list_loaded"
        layout="@layout/view_category_list_loaded" />

    <include
        android:id="@+id/view_general_error"
        layout="@layout/view_general_error" />

</ViewFlipper>